# naivphys4rp_msgs

./: CMakeLists.txt  LICENSE  README.md  package.xml
action/: KBClassConstituent.action  KBClassSynonym.action  KBCommonPose.action  KBDataProperty.action  KBDomainRelation.action  KBFromRoleToObject.action  KBListConcept.action  KBListParticipant.action  KBListProperty.action  KBLoadBeliefState.action  KBLoadOntology.action  KBNewIndividual.action  KBObjectProperty.action  KBObjectRelation.action  KBPotentialActionObject.action  KBPropertyIO.action  KBQueryKnowledge.action  KBSubClass.action  KBSubProperty.action
msg/: KBOntologyDescription.msg
